// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator Guttering component renders correctly 1`] = `
<div>
  <div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
          data-testid="typography"
        >
          Choose a gutter material
        </h6>
      </div>
      <div
        class="css-klihbg"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-1xqc8d-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-2 Grid-item css-1sc1eqi-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="CardRadioGroup-item css-tmrmui"
            >
              <label>
                <input
                  class="CardInput-input"
                  name="guttering"
                  type="radio"
                  value="Test Guttering"
                />
                <div
                  class="MuiButtonBase-root CardInput-card css-13lto1c-MuiButtonBase-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root ToggleCard-body css-6erhqq-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="ToggleCard-image"
                      style="background-image: url(https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg);"
                    />
                    <h6
                      class="MuiTypography-root MuiTypography-h6 ToggleCard-title css-1le86ss-MuiTypography-root"
                      data-testid="typography"
                    >
                      Test Guttering
                    </h6>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Guttering component renders gutter variants and hooks 1`] = `
<div>
  <div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
          data-testid="typography"
        >
          Choose a gutter material
        </h6>
      </div>
      <div
        class="css-klihbg"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-1xqc8d-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-2 Grid-item css-1sc1eqi-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="CardRadioGroup-item css-tmrmui"
            >
              <label>
                <input
                  checked=""
                  class="CardInput-input"
                  name="guttering"
                  type="radio"
                  value="Test Guttering"
                />
                <div
                  class="MuiButtonBase-root CardInput-card css-13lto1c-MuiButtonBase-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root ToggleCard-body css-6erhqq-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="ToggleCard-image"
                      style="background-image: url(https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg);"
                    />
                    <h6
                      class="MuiTypography-root MuiTypography-h6 ToggleCard-title css-1le86ss-MuiTypography-root"
                      data-testid="typography"
                    >
                      Test Guttering
                    </h6>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
          data-testid="typography"
        >
          Select the colour
        </h6>
      </div>
      <div
        class="css-klihbg"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-1xqc8d-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-2 Grid-item css-1sc1eqi-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="CardRadioGroup-item css-tmrmui"
            >
              <label>
                <input
                  checked=""
                  class="CardInput-input"
                  name="gutteringVariant"
                  type="radio"
                  value="34391"
                />
                <div
                  class="MuiButtonBase-root CardInput-card css-13lto1c-MuiButtonBase-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root ToggleCard-body css-6erhqq-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="ToggleCard-image"
                      style="background-image: url(https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg);"
                    />
                    <h6
                      class="MuiTypography-root MuiTypography-h6 ToggleCard-title css-1le86ss-MuiTypography-root"
                      data-testid="typography"
                    >
                      Test Guttering Black
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body1 ToggleCard-paragraph css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      Nobb: 
                      <strong>
                        34391
                      </strong>
                    </p>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-2 Grid-item css-1sc1eqi-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="CardRadioGroup-item css-tmrmui"
            >
              <label>
                <input
                  class="CardInput-input"
                  name="gutteringVariant"
                  type="radio"
                  value="4391"
                />
                <div
                  class="MuiButtonBase-root CardInput-card css-13lto1c-MuiButtonBase-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root ToggleCard-body css-6erhqq-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="ToggleCard-image"
                      style="background-image: url(https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg);"
                    />
                    <h6
                      class="MuiTypography-root MuiTypography-h6 ToggleCard-title css-1le86ss-MuiTypography-root"
                      data-testid="typography"
                    >
                      Test Guttering Grey
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body1 ToggleCard-paragraph css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      Nobb: 
                      <strong>
                        4391
                      </strong>
                    </p>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
          data-testid="typography"
        >
          Select a gutter hook type
        </h6>
      </div>
      <div
        class="css-klihbg"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-1xqc8d-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-2 Grid-item css-1sc1eqi-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="CardRadioGroup-item css-tmrmui"
            >
              <label>
                <input
                  checked=""
                  class="CardInput-input"
                  name="gutteringHook"
                  type="radio"
                  value="34392"
                />
                <div
                  class="MuiButtonBase-root CardInput-card css-13lto1c-MuiButtonBase-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root ToggleCard-body css-6erhqq-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="ToggleCard-image"
                      style="background-image: url(https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg);"
                    />
                    <h6
                      class="MuiTypography-root MuiTypography-h6 ToggleCard-title css-1le86ss-MuiTypography-root"
                      data-testid="typography"
                    >
                      Test Guttering Hook Black
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body1 ToggleCard-paragraph css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      Nobb: 
                      <strong>
                        34392
                      </strong>
                    </p>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-2 Grid-item css-1sc1eqi-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="CardRadioGroup-item css-tmrmui"
            >
              <label>
                <input
                  class="CardInput-input"
                  name="gutteringHook"
                  type="radio"
                  value="4392"
                />
                <div
                  class="MuiButtonBase-root CardInput-card css-13lto1c-MuiButtonBase-root"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root ToggleCard-body css-6erhqq-MuiPaper-root-MuiCard-root"
                  >
                    <div
                      class="ToggleCard-image"
                      style="background-image: url(https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg);"
                    />
                    <h6
                      class="MuiTypography-root MuiTypography-h6 ToggleCard-title css-1le86ss-MuiTypography-root"
                      data-testid="typography"
                    >
                      Test Guttering Hook Grey
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body1 ToggleCard-paragraph css-87ejlm-MuiTypography-root"
                      data-testid="typography"
                    >
                      Nobb: 
                      <strong>
                        4392
                      </strong>
                    </p>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
          data-testid="typography"
        >
          Add down pipe (3m lengths)
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
        data-testid="grid-container"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-3 Grid-item css-peyioj-MuiGrid2-root"
          data-testid="grid-item"
        >
          <div
            class="upDownSimpleNumericInputStyles-root locked-xs css-1gfu5c9"
          >
            <button
              aria-label="Down"
              class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-contained MuiIconButton-sizeLarge button-sides css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="RemoveIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13H5v-2h14v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <div
              class="MuiFormControl-root MuiTextField-root input in-middle css-1xgljuk-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-climad-MuiInputBase-root-MuiFilledInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
                  id="mui-1"
                  type="text"
                  value="0"
                />
              </div>
            </div>
            <button
              aria-label="Up"
              class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-contained MuiIconButton-sizeLarge button css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="FieldContainer"
    >
      <div
        class="head"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
          data-testid="typography"
        >
          How many downpipes connectors?
        </h6>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1149tz3-MuiGrid2-root"
        data-testid="grid-container"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-3 Grid-item css-peyioj-MuiGrid2-root"
          data-testid="grid-item"
        >
          <div
            class="upDownSimpleNumericInputStyles-root locked-xs css-1gfu5c9"
          >
            <button
              aria-label="Down"
              class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-contained MuiIconButton-sizeLarge button-sides css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="RemoveIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13H5v-2h14v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <div
              class="MuiFormControl-root MuiTextField-root input in-middle css-1xgljuk-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-climad-MuiInputBase-root-MuiFilledInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
                  id="mui-2"
                  type="text"
                  value="0"
                />
              </div>
            </div>
            <button
              aria-label="Up"
              class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-medium Button-contained MuiIconButton-sizeLarge button css-142qa0u-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Guttering component renders with no options 1`] = `
<div>
  <div />
</div>
`;
